modify project name
